--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,8 @@ website:
             file: data-exercise/data-exercise.qmd
           - text: "Data Analysis Exercise"
             file: cdcdata-exercise/cdcdata-exercise.qmd
+          - text: "Presentation Exercise"
+            file: presentation-exercise/visualization-exercise.qmd
     right:
       - icon: github 
         href: https://github.com/ancramer/annalisecramer-MADA-portfolio        
