--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,8 @@ website:
             file: cdcdata-exercise/cdcdata-exercise.qmd
           - text: "Presentation Exercise"
             file: presentation-exercise/visualization-exercise.qmd
+          - text: "Fitting Exercise"
+            file: fitting-exercise/fitting-exercise.qmd
     right:
       - icon: github 
         href: https://github.com/ancramer/annalisecramer-MADA-portfolio        
