--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,8 @@ website:
             file: presentation-exercise/visualization-exercise.qmd
           - text: "Fitting Exercise"
             file: fitting-exercise/fitting-exercise.qmd
+          - text: "Machine Learning"
+            file: ml-models-exercise/ml-model-exercise.qmd
     right:
       - icon: github 
         href: https://github.com/ancramer/annalisecramer-MADA-portfolio        
